--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-add_executable(qdb_test main.cpp)
+set(TEST_EXECUTABLE_NAME "qdb_test")
+
+add_executable(${TEST_EXECUTABLE_NAME} main.cpp)
 
 target_link_libraries(qdb_test PRIVATE
     quickdb
